// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockStyle renders 0 1`] = `
Array [
  .c0 {
  border-block-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders function 1`] = `
Array [
  .c0 {
  border-block-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders negative number 1`] = `
Array [
  .c0 {
  border-block-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-block-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-block-style: July;
}

@media May {
  .c0 {
    border-block-style: August;
  }
}

@media April {
  .c0 {
    border-block-style: September;
  }
}

@media January {
  .c0 {
    border-block-style: November;
  }
}

@media April {
  .c0 {
    border-block-style: August;
  }
}

@media June {
  .c0 {
    border-block-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: July;
}

@media May {
  .c0 {
    border-block-style: August;
  }
}

@media April {
  .c0 {
    border-block-style: September;
  }
}

@media January {
  .c0 {
    border-block-style: November;
  }
}

@media April {
  .c0 {
    border-block-style: August;
  }
}

@media June {
  .c0 {
    border-block-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-style: November;
  }
}

@media April {
  .c0 {
    border-block-style: January;
  }
}

@media January {
  .c0 {
    border-block-style: December;
  }
}

@media April {
  .c0 {
    border-block-style: April;
  }
}

@media June {
  .c0 {
    border-block-style: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-style: November;
  }
}

@media April {
  .c0 {
    border-block-style: January;
  }
}

@media January {
  .c0 {
    border-block-style: December;
  }
}

@media April {
  .c0 {
    border-block-style: April;
  }
}

@media June {
  .c0 {
    border-block-style: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-block-style: July;
  }
}

@media April {
  .c0 {
    border-block-style: August;
  }
}

@media January {
  .c0 {
    border-block-style: September;
  }
}

@media April {
  .c0 {
    border-block-style: November;
  }
}

@media June {
  .c0 {
    border-block-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-style: July;
  }
}

@media April {
  .c0 {
    border-block-style: August;
  }
}

@media January {
  .c0 {
    border-block-style: September;
  }
}

@media April {
  .c0 {
    border-block-style: November;
  }
}

@media June {
  .c0 {
    border-block-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-style: January;
  }
}

@media April {
  .c0 {
    border-block-style: December;
  }
}

@media January {
  .c0 {
    border-block-style: April;
  }
}

@media April {
  .c0 {
    border-block-style: May;
  }
}

@media June {
  .c0 {
    border-block-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-style: January;
  }
}

@media April {
  .c0 {
    border-block-style: December;
  }
}

@media January {
  .c0 {
    border-block-style: April;
  }
}

@media April {
  .c0 {
    border-block-style: May;
  }
}

@media June {
  .c0 {
    border-block-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-block-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders string 1`] = `
Array [
  .c0 {
  border-block-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStyle renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBlockStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
